prueba PC NO dropbox, desde Desktop

--- a/JScalculator/index.html
+++ b/JScalculator/index.html
@@ -13,7 +13,7 @@
             <div id="buttonContainer">
                 <div id='firstSection' class="sections">
                     <div class="buttonRow">
-                        <button id="ac/dc"></button>
+                        <button id="ac"></button>
                         <button id="ce"></button>
                         <button id="divide"></button>
                         <button id="multiply"></button>
