calculator layout second session

--- a/JScalculator/index.html
+++ b/JScalculator/index.html
@@ -13,38 +13,38 @@
             <div id="buttonContainer">
                 <div id='firstSection' class="sections">
                     <div class="buttonRow">
-                        <button id="ac"></button>
-                        <button id="ce"></button>
-                        <button id="divide"></button>
-                        <button id="multiply"></button>
+                        <button id="ac" class="redButtons">AC</button>
+                        <button id="ce" class="redButtons">CE</button>
+                        <button id="divide">/</button>
+                        <button id="multiply">X</button>
                     </div>
                     <div class="buttonRow">
-                        <button id="7"></button>
-                        <button id="8"></button>
-                        <button id="9"></button>
-                        <button id="substract"></button>
+                        <button id="7">7</button>
+                        <button id="8">8</button>
+                        <button id="9">9</button>
+                        <button id="substract">-</button>
                     </div>
                     <div class="buttonRow">
-                        <button id="4"></button>
-                        <button id="5"></button>
-                        <button id="6"></button>
-                        <button id="add"></button>
+                        <button id="4">4</button>
+                        <button id="5">5</button>
+                        <button id="6">6</button>
+                        <button id="add">+</button>
                     </div>
                 </div>
                 <div id='secondSection' class="sections">
                     <div class="buttonRow">
-                        <button id="1"></button>
-                        <button id="2"></button>
+                        <button id="1">1</button>
+                        <button id="2">2</button>
                     </div>
                     <div class="buttonRow">
-                        <button id="0"></button> 
+                        <button id="zero">0</button> 
                     </div>
                 </div>
                 <div id='thirdSection' class="sections">
                     <div class="buttonRow">
-                        <button id="3"></button>
-                        <button id="point"></button>
-                        <button id="equal"></button> 
+                        <button id="3">3</button>
+                        <button id="point">.</button>
+                        <button id="equal">=</button> 
                     </div>
                 </div>
             </div>
